# splunk-otel-python-contrib

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pr_agent.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCURRENT_EVAL_ARCHITECTURE.md  CONCURRENT_EVAL_BENCHMARK.md  CONVERSATION_CONTEXT_REVIEW.md  HYBIM-447_remove-run-id-plan.md  KDECKER.md  Makefile  README.eval-monitoring.md  README.md  README.packages.architecture.md  RELEASING.md  TOKENATOR_IMPLEMENTATION_PLAN.md  WORKFLOW_EVENT_EMISSION_FIX.md  _debug_workflow_span.py  aws-profile-diagram.html  cursor_aws_clusters_access_and_ai_defen.md  dev-genai-requirements.txt  dev-requirements.txt  gen-requirements.txt  progress.md  progress_traceloop.md  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-aidefense/: CHANGELOG.md  README.md  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-aidefense/docs/: adding-ai-defense.html  ai-defense-overview.html  demo-app-deep-dive.html  how-the-app-works.html  sending-data-to-collector.html
instrumentation-genai/opentelemetry-instrumentation-aidefense/tests/: conftest.py  test_gateway_mode.py  test_instrumentation.py  test_singleton.py
instrumentation-genai/opentelemetry-instrumentation-bedrock-agentcore/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-bedrock-agentcore/tests/: conftest.py  test_browser.py  test_code_interpreter.py  test_entrypoint.py  test_instrumentor.py  test_memory.py
instrumentation-genai/opentelemetry-instrumentation-crewai/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-crewai/examples/: Dockerfile  Dockerfile.customer-support  README.md  cronjob-customer-support.yaml  cronjob.yaml  customer_support.py  env.example  financial_assistant.py  requirements.txt  researcher_writer_manager.py  run.sh
instrumentation-genai/opentelemetry-instrumentation-crewai/tests/: __init__.py  conftest.py  test_api_surface.py  test_instrumentation.py  test_openai_v2_inheritance.py  test_singleton.py  test_thread_safety.py
instrumentation-genai/opentelemetry-instrumentation-fastmcp/: CHANGELOG.md  README.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-fastmcp/examples/: .env.example  _otel_helpers.py  dev_assistant_client.py  dev_assistant_server.py  math_tools_server.py
instrumentation-genai/opentelemetry-instrumentation-fastmcp/tests/: conftest.py  test_client_instrumentor.py  test_gap5_http_metadata.py  test_http_transport_metadata.py  test_instrumentation.py  test_propagation.py  test_server_instrumentor.py  test_session_baggage_propagation.py  test_transport_instrumentor.py  test_transport_propagation.py  test_utils.py
instrumentation-genai/opentelemetry-instrumentation-langchain/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-langchain/docs/: callbacks_mapping.md
instrumentation-genai/opentelemetry-instrumentation-langchain/tests/: conftest.py  test_callback_handler_agent.py  test_callback_handler_unit.py  test_conversation_id_inference.py  test_error_classification.py  test_langchain_embedding.py  test_langchain_llm.py  test_langchain_llm_util.py  test_langgraph_interrupt_resume.py  test_langgraph_manual_instrumentation.py
instrumentation-genai/opentelemetry-instrumentation-llamaindex/: CHANGELOG.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-llamaindex/examples/: .env.example  travel_planner_agent.py
instrumentation-genai/opentelemetry-instrumentation-llamaindex/tests/: conftest.py  test_agent_attributes.py  test_circuit_agent.py  test_embedding_instrumentation.py  test_invocation_manager.py  test_llm_instrumentation.py  test_rag.py  test_ttfc.py  test_ttft.py  test_workflow_agent.py  test_workflow_agent_variants.py
instrumentation-genai/opentelemetry-instrumentation-openai-agents-v2/: CHANGELOG.md  README.md  README.rst  pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-openai-agents-v2/tests/: conftest.py  requirements.latest.txt  requirements.oldest.txt  test_tracer.py  test_z_span_processor_unit.py
instrumentation-genai/opentelemetry-instrumentation-weaviate/: CHANGELOG.md  README.rst  pyproject.toml  pytest.ini
instrumentation-genai/opentelemetry-instrumentation-weaviate/tests/: README.md  conftest.py  test_instrumentation.py  test_metrics.py  test_span_attributes.py  test_utils.py  test_weaviate_v3.py  test_weaviate_v4.py
util/opentelemetry-util-auth/: CHANGELOG.md  README.rst  pyproject.toml
util/opentelemetry-util-auth/tests/: test_oauth2_token_manager.py
util/opentelemetry-util-genai-emitters-test/: CHANGELOG.md  README.md  pyproject.toml
util/opentelemetry-util-genai-emitters-test/tests/: test_emitter.py
util/opentelemetry-util-genai-evals-splunk-circuit/: CHANGELOG.md  README.rst  pyproject.toml
util/opentelemetry-util-genai-evals-splunk-circuit/examples/: run_circuit_evaluation.py
util/opentelemetry-util-genai-evals-splunk-circuit/tests/: conftest.py  test_circuit_deepeval.py
util/opentelemetry-util-genai-openlit-translator/: .env.example  CHANGELOG.md  README.rst  pyproject.toml  requirements-examples.txt
util/opentelemetry-util-genai-openlit-translator/examples/: openlit_processor_example.py
util/opentelemetry-util-genai-openlit-translator/src/: opentelemetry_util_genai_openlit_translator.pth
util/opentelemetry-util-genai-openlit-translator/tests/: test_agent_task_message_reconstruction.py  test_args_wrapper_format.py  test_message_caching.py  test_message_serialization.py  test_nested_openlit_reconstruction.py  test_nested_traceloop_reconstruction.py  test_openlit_content_normalizer.py  test_openlit_integration.py  test_real_openlit_format.py  test_real_traceloop_format.py  test_traceloop_integration.py
util/opentelemetry-util-genai-test/: README.rst  pyproject.toml
util/opentelemetry-util-genai-test/tests/: test_oauth2_token_manager_env.py
util/opentelemetry-util-genai-tokenator/: CHANGELOG.md  README.rst  pyproject.toml  pytest.ini
(+807 files in other folders)
