[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-otel-instrumentation-aidefense"
dynamic = ["version"]
description = "OpenTelemetry Cisco AI Defense instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Aditya Mehra", email = "admehra@cisco.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.38.0.dev0",
  "opentelemetry-instrumentation ~= 0.59b0.dev0",
  "opentelemetry-semantic-conventions ~= 0.59b0.dev0",
  "splunk-otel-util-genai>=0.1.5",
  "wrapt >= 1.14.0, < 2.0.0",
]

[project.optional-dependencies]
instruments = []  # SDK is optional - Gateway Mode works without it
test = [
  "cisco-aidefense-sdk >= 2.0.0",
  "pytest >= 7.0.0",
  "pytest-cov >= 4.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
aidefense = "opentelemetry.instrumentation.aidefense:AIDefenseInstrumentor"

[project.urls]
Homepage = "https://github.com/signalfx/splunk-otel-python-contrib/tree/main/instrumentation-genai/opentelemetry-instrumentation-aidefense"
Repository = "https://github.com/signalfx/splunk-otel-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/aidefense/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.ruff]
exclude = [
    "./", 
]

