[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-otel-instrumentation-bedrock-agentcore"
dynamic = ["version"]
description = "OpenTelemetry Bedrock AgentCore instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Splunk", email = "o11y-gdi@splunk.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.38.0.dev0",
  "opentelemetry-instrumentation ~= 0.59b0.dev0",
  "opentelemetry-semantic-conventions ~= 0.59b0.dev0",
  "splunk-otel-util-genai>=0.1.9",
  "wrapt >= 1.14.0, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "bedrock-agentcore >= 1.0.0",
]
test = [
  "bedrock-agentcore >= 1.0.0",
  "pytest >= 7.0.0",
  "pytest-asyncio >= 0.21.0",
  "pytest-cov >= 4.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
bedrock_agentcore = "opentelemetry.instrumentation.bedrock_agentcore:BedrockAgentCoreInstrumentor"

[project.urls]
Homepage = "https://github.com/signalfx/splunk-otel-python-contrib/tree/main/instrumentation-genai/opentelemetry-instrumentation-bedrock-agentcore"
Repository = "https://github.com/signalfx/splunk-otel-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/bedrock_agentcore/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.ruff]
exclude = [
    "./",
]
