[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-otel-instrumentation-weaviate"
dynamic = ["version"]
description = "Splunk OpenTelemetry Weaviate instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.38.0.dev0",
  "opentelemetry-instrumentation ~= 0.59b0.dev0",
  "opentelemetry-semantic-conventions ~= 0.59b0.dev0",
]

[project.optional-dependencies]
instruments = [
  "weaviate-client >= 3.0.0, <5.0.0",
]
test = [
  "pytest >= 7.0.0",
  "pytest-recording >= 0.13.0",
  "vcrpy >= 7.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
weaviate = "opentelemetry.instrumentation.weaviate:WeaviateInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation-genai/opentelemetry-instrumentation-weaviate"
Repository = "https://github.com/open-telemetry/opentelemetry-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/weaviate/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.ruff]
exclude = [
    "./", 
]
