[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-otel-util-genai-translator-openlit"
dynamic = ["version"]
description = "openlit -> GenAI translator emitter for OpenTelemetry GenAI"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-instrumentation ~= 0.52b1",
  "opentelemetry-semantic-conventions ~= 0.52b1",
  "opentelemetry-api>=1.31.0",
  "opentelemetry-sdk>=1.31.0",
  "splunk-otel-util-genai>=0.1.4",
]

[project.entry-points.opentelemetry_configurator]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib"
Repository = "https://github.com/open-telemetry/opentelemetry-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/util/genai/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
include = [
  "src/opentelemetry_util_genai_openlit_translator.pth",
]

[tool.hatch.build.targets.wheel.force-include]
"src/opentelemetry_util_genai_openlit_translator.pth" = "opentelemetry_util_genai_openlit_translator.pth"