[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splunk-util-genai-tokenator"
dynamic = ["version"]
description = "Tokenator - Predictive rate limit monitoring for GenAI agentic applications"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api>=1.31.0",
  "splunk-otel-util-genai>=0.1.0",
]

[project.entry-points."opentelemetry_util_genai_emitters"]
rate_limit_predictor = "opentelemetry.util.genai.rate_limit.emitter:load_emitters"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/signalfx/splunk-otel-python-contrib"
Repository = "https://github.com/signalfx/splunk-otel-python-contrib"

[tool.hatch.version]
path = "src/opentelemetry/util/genai/rate_limit/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
